# websocket-server-cpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: templates.cpp
src/WebsocketServer/: WebSocketServer.cpp  WebsocketServer.h
src/constants/: constants.h  messageTypes.h
src/types/: types.h
